<resources>
    <string name="app_name">NMock</string>
    <string name="nmock">N M o c k</string>
    <string name="nmockDescription">Hello to FAKE things…</string>
    <string name="splashDescription">just a second for showing my logo =))</string>
    <string name="versionName">v0.0.1</string>
    <string name="createMock">Create Mock</string>
    <string name="mockList">Mock List</string>
    <string name="trackYourMock">Track Your Mock</string>
    <string name="importYourMock">Import Your Mock</string>
    <string name="mockArchive">Mock Archive</string>
    <string name="requestLocationPermissionRelational">We should have (Location Permissions) for working correctly!</string>
    <string name="iAccept">I Accept!</string>
    <string name="locationIsOff">Your location provider is OFF!</string>
    <string name="turnOn">Turn On</string>
    <string name="unknownProblem">There was a Problem on Running Application</string>
    <string name="applyOrigin">Apply Origin Location</string>
    <string name="chooseOriginLocation">Please choose Origin Location</string>
    <string name="chooseDestinationLocation">Please choose Destination Location</string>
    <string name="withoutOriginInformation">Please choose someWhere for Origin…</string>
    <string name="withoutDestinationInformation">Please choose someWhere for Destination…</string>
    <string name="pleaseTurnOnLocation">For using this app, you must turning on the location!</string>
    <string name="locationPermissionRational">This app must have location permission!</string>
    <string name="originDestinationProblem">You have origin and Destination!</string>
    <string name="save">Save</string>
    <string name="youCanSaveNow">You can save your Trip now!</string>
    <string name="addingNewMock">Adding new Mock</string>
    <string name="mockName">Mock name</string>
    <string name="mockDescription">Mock description</string>
    <string name="cancel">Cancel</string>
    <string name="no">No!</string>
    <string name="mockDescriptionHelper">You can leave it empty…</string>
    <string name="youMustHaveANameForIt">You must have a Name for it!</string>
    <string name="speedHelper">You can change it later…</string>
    <string name="speed">Speed</string>
    <string name="speedError">You must have a speed for your Mock!</string>
    <string name="unValidSpeed">You can only use speeds between 0 to 999 kilometers!</string>
    <string name="undo">undo</string>
    <string name="welcome">Welcome to</string>
    <string name="addNewMock">Add new Mock</string>
    <string name="loading">Just a moment…</string>
    <string name="nothingToShowHere">Nothing to show here…</string>
    <string name="deleteAllDialogTitle">Are you sure that you want to delete all of Mocks?</string>
    <string name="deleteDialogTitle">Are you sure that you want to delete Mock?</string>
    <string name="yes">Yes!</string>
    <string name="youCanEditYourTrip">You can edit your trip…</string>
    <string name="playingMockDialogTitle">Would you like to play this Trip right now?</string>
    <string name="speedDialogTitle">Choose your speed…</string>
    <string name="navigate">Navigate</string>
    <string name="share">Share</string>
    <string name="shareViaFile">Share via file</string>
    <string name="notificationTitle">Mock is running!</string>
    <string name="mockPlayerNotificationDescription">Your mock trip was started and you should get the Mock location from other apps</string>
    <string name="limitRequestsException">Our Service has a Problem, We hope to fix it as soon as possible!</string>
    <string name="databaseInsertionException">Database has a Problem! Please try again…</string>
    <string name="databaseGettingException">Information of your Mock had a Problem! Please add this Mock again…</string>
    <string name="comingSoon">This feature will be in app as soon as possible :)</string>
    <string name="playerDialogTitle">Do you want to stop Mock service?</string>
    <string name="stopMockService">Stop mock service</string>
    <string name="justLeave">Just leave</string>
    <string name="mockPlayerServiceStoppedCompletely">Mock player stopped!</string>
    <string name="linkProblemTitle">Your link have a problem, we can not open that!</string>
    <string name="mockEditorLeaveDialogTitle">You want leave this mock without saving?</string>
    <string name="mockInformationProblem">Your mock information has a problem! Please try again…</string>
    <string name="tripCompleted">Your trip was completed!</string>
    <string name="youWantToStopLastMock">Are you sure that you want to stop player?</string>
    <string name="youWantStopAndDeleteMock">Are you sure that you want to stop player and delete all Mocks?</string>
    <string name="allowApplicationToMock">For using application, you should set application as Mock application in developer setting!</string>
    <string name="openIt">Open it!</string>
    <string name="withoutDescription">Without description…</string>
    <string name="wouldYouLikeToTryAgain">Umm… We have a problem on getting information from server. would you like to try again?</string>
    <string name="wouldYouLikeToTryAgainForDatabase">Umm… We have a problem on saving mock. would you like to try again?</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="createdAt">Created At:</string>
    <string name="updatedAt">Updated At:</string>
    <string name="unknownAddress">Unknown Address…</string>
    <string name="closeMockPlayer">Close player</string>
    <string name="reportLogs">Report Logs</string>
    <string name="thankYouForYourHelp">Thank you for your help…</string>
    <string name="release">Release</string>
    <string name="debug">Debug</string>
    <string name="reportLogHelper">If you click on Report Logs, you help us to improve functionalities and fix bugs in the future…</string>
    <string name="weHaveYourLocation">We have your location!</string>
    <string name="locationServiceDescription">We are tracking your location to show that in application…</string>
    <string name="applicationNotificationChannelDescription">With these notifications, We show you all jobs that we start in application.</string>
    <string name="pushNotificationChannelDescription">With these notifications, We show you notifications that make you enjoy in application.</string>
    <string name="applicationNotificationChannelId">NMOCK_NOTIFICATION_ID</string>
    <string name="pushNotificationChannelId">PUSH_NOTIFICATION_ID</string>
    <string name="silentPushNotificationChannelId">SILENT_PUSH_NOTIFICATION_ID</string>
    <string name="applicationNotificationChannelName">NMock Notification</string>
    <string name="pushNotificationChannelName">Push Notification</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="authWelcomeMessage">Give your information, take your locations…</string>
    <string name="authSuccessMessage">You have successfully logged in!</string>
    <string name="fieldCanNotBeEmpty">Field can not be empty!</string>
    <string name="yourEmailFormatIsNotCorrect">Your email format is not correct!</string>
    <string name="minimumPasswordError">Your password is not good enough! please use another one…</string>
    <string name="signInMessage">Enter your information to see your locations, trips, history and more…</string>
    <string name="signUpMessage">With an account, you can save your trips and locations!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="justTakeAMoment">Just take a moment…</string>
    <string name="gps">GPS</string>
    <string name="network">NETWORK</string>
    <string name="provider">Provider</string>
    <string name="km.h">KM/H</string>
    <string name="importDescription">Some of them are under development…</string>
    <string name="importTitle">Choose how you want to import your mock?</string>
    <string name="importFromJsonFile">Import from JSON file</string>
    <string name="importWithLocations">Import with locations</string>
    <string name="importWithNMockLink">Import with NMock link</string>
    <string name="submit">Submit</string>
    <string name="openInEditor">Open in editor</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="outOfIranGeocodingMessage">Unfortunately, Our service can\'t provide addresses for locations that are out of Iran. but you can still save and use your mocks!</string>

    <!-- Exception messages -->
    <string name="unknownException">Unexpected Error occurred! Please try again…</string>
    <string name="locationInformationException">Sorry, we could not get the location information from server.</string>
    <string name="routeInformationException">Sorry, we could not get the route information from server.</string>
    <string name="mockProblemException">We have a problem on Mock information. please add your mock again…</string>
    <string name="importedMockProblemException">We have a problem on Mock information. please import your mock again…</string>
    <string name="updateSpeedWasFailed">Umm… we have a problem on changing Mock speed. please try again…</string>
    <string name="exportingMockProblem">Umm… we have a problem on sharing Mock. please try again…</string>
    <string name="jsonStructureProblemMessage">Your json file has a problem in structure. please check it and try again…</string>
    <string name="jsonParseProcessMessage">Umm… we have a problem on processing Mock json file. please try again…</string>
    <string name="emailOrPasswordIsWrongMessage">Your email or password isn\'t correct!</string>
    <string name="authExceptionMessage">We had a problem on getting data from server. please try again.</string>
</resources>
